# AetherFiles

./: README.md  aetherfiles_0.1.0_amd64.deb  build_deb.sh  desktop.vaxp  meson.build  test_trash  test_trash.c  truncate_views.py
aetherfiles_0.1.0_amd64/DEBIAN/: control
aetherfiles_0.1.0_amd64/usr/share/applications/: aetherfiles.desktop
data/: com.aetheros.files.gresource.xml  com.aetheros.files.policy  meson.build  shortcuts.ui  style.css
src/: main.c  meson.build
src/data/: app_repository.c  app_repository.h  archive_manager.c  archive_manager.h  bluez_dbus_manager.c  bluez_dbus_manager.h  drive_manager.c  drive_manager.h  gio_file_repository.c  gio_file_repository.h  privileged_file_manager.c  privileged_file_manager.h  thumbnail_manager.c  thumbnail_manager.h
src/domain/: app_entity.c  app_entity.h  bluetooth_device_entity.c  bluetooth_device_entity.h  drive_entity.c  drive_entity.h  file_entity.c  file_entity.h  file_repository.c  file_repository.h
src/helper/: aetherfiles-helper.c  privileged_ops.c  privileged_ops.h
src/presentation/: application.c  application.h
src/presentation/controllers/: clipboard_controller.c  clipboard_controller.h  external_drop_controller.c  external_drop_controller.h
src/presentation/views/: app_chooser_dialog.c  app_chooser_dialog.h  app_uninstall_dialog.c  app_uninstall_dialog.h  bluetooth_share_dialog.c  bluetooth_share_dialog.h  window.c  window.h  window_actions.c  window_apps.c  window_apps.h  window_context_menu.c  window_nav.c  window_private.h  window_sidebar.c  window_tabs.c  window_views.c
